2007-06-28  Scott Reeves <sreeves@novell.com> 

	* src/PreferencesDialog.cs, data/glade/giver-prefs.glade: Finish
	  loading preferences

2007-06-28  Calvin Gaisford <calvinrg@gmail.com> 

	* src/ServiceInfo.cs: Added ID
	* src/TargetWindow.cs: New Window to choose targets
	* src/ServiceLocator.cs: Modified Event names to make sense
	* src/Application.cs: Modified events and removed menu that shows
	  targets
	* src/Makefile.am: Added new widgets to build
	* src/TargetService.cs: New Widget to show services
	* giver.mdp: Added TargetService and TargetWindow Widgets

2007-06-28  Scott Reeves <sreeves@novell.com> 

	* src/PreferencesDialog.cs, src/Preferences.cs,
	  data/glade/giver-prefs.glade, data/glade/Makefile.am,
	  data/glade/gravatar.gif: updated prefs dialog, read values

2007-06-28  Calvin Gaisford <calvinrg@gmail.com> 

	* src/ServiceInfo.cs, src/GiverMenuItem.cs, src/SendingHandler.cs:
	  Renamed Service to ServiceInfo
	* src/ServiceLocator.cs: Renamed Service to ServiceInfo and threaded
	  the resolver to get icons on a thread
	* src/Application.cs: Added stock quit menu item
	* src/Makefile.am: Added ServiceInfo
	* giver.mdp: Added ServiceInfo class

2007-06-28  Calvin Gaisford <calvinrg@gmail.com> 

	* src/RequestHandler.cs: updated to use save location 
	* src/GiverService.cs: added full name publish if the preference is set
	* src/Preferences.cs: added full name and save location

2007-06-27  Calvin Gaisford <calvinrg@gmail.com> 

	* src/Utilities.cs, src/ServiceLocator.cs, src/RequestHandler.cs,
	  src/GiverService.cs: Added uri and gravatar support
	* src/Preferences.cs: updated to use XML and saves it
	* giver.mdp: Added XML for preferences
	* src/PreferencesDialog.cs: debug

2007-06-27  Scott Reeves <sreeves@novell.com> 

	* src/PreferencesDialog.cs, src/Application.cs: preferences update

2007-06-27  Calvin Gaisford <calvinrg@gmail.com> 

	* src/Makefile.am, giver.mdp, configure.ac: removed evolution-sharp
	  dependency
